# code-challenge

./: .env  .env-template  .flake8  .gitignore  Dockerfile  Makefile  README.md  app.js  app.py  cmd.go  constants.js  docker-compose.yml  go.mod  go.sum  http_test.go  instructions.md  main.go  main.py  middleware.py  middleware.tavern.yml  package.json  pre-commit-config.yaml  pyproject.toml  randori.py  requirements.txt  server.js  setup.py
api/: proxy.py
app/: app.go
application/: api_gateway.py  dummy.py
backend-api/: lambda_function.py
backend-rest-api/: lambda_function.py
cmd/: server.go
code_challenge/: app.py  config.py
config/: config.go  config.json  config.py  config_abs.py  logging.yml
controller/: base_controller.go  ping.go  ping_test.go  reverse_proxy.go
core/: backend.py
db/: logs.sqlite
domain/: malicious.go  request.go
exercise/: .dockerignore  .env  docker-compose.yml
fake_endpoint/: endpoint.go
filter/: base_filter.go  duplicated.go  malicious.go  malicious_test.go
infrastructure/: ip_cache.py
middleware/: is_malicious.js  raw_body.js  repeat_request.js  require_content_type.js
proxies/: http_randori_proxy.go  http_randori_proxy_test.go  proxy.go
randorihandler/: randorihandler.go
rest/: app.py
router/: router.go
routes/: index.js
scripts/: test.sh
services/: crypto.py  request_inspector.py
src/: README.md  Readme.md  backend_proxy.js  client.py  client_cache.js  router.js  server.js  validate.js
static/: main.css  main.js
templates/: index.html  layout.html
test/: cache.spec.js  setup.js  (+1 more)
(+76 files in other folders)
