[tool.poetry]
name = "code-challenge"
version = "0.1.0"
description = ""
authors = ["Jay Carroll <jay.carroll@hey.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
